--- a/sections/example-en.tex
+++ b/sections/example-en.tex
@@ -8,7 +8,7 @@ Call acronym: \ac{DoF}, \ac{FRVF}.
 \chapter{OBJECTIVE}
 \label{chap:objetive}
 
-On line citation \citeonline{gupta2012cooperative}.
+On line citation \citeonline{earnshaw2014virtual}.
 Normal cite: \cite{earnshaw2014virtual}. Multiple citation: \cite{azuma1997survey, earnshaw2014virtual}.
 
 \section{Topic a}
@@ -25,44 +25,44 @@ Normal cite: \cite{earnshaw2014virtual}. Multiple citation: \cite{azuma1997surve
 It should contain the description of the study area and materials (data bank, data collection, images, etc.) and methodological procedures (experiments, interviews, statistical methods, etc.) that will be used to carry out the work, so that others researchers can reproduce the study. It can be presented as subdivisions below.
 
 \begin{itemize}
-    \item \large \textbf{AHA}: \large \textit{The American Heart Association Database for Evaluation of Ventricular Arrhythmia Detectors}.
-    \item \large \textbf{MIT–BIH}: \large \textit{The Massachusetts Institute of Technology–Beth Israel Hospital Arrhythmia Database}.
-    \item \large \textbf{ESC}: \large \textit{The European Society of Cardiology ST-T Database} (90 records of 2 hours each).
-    \item \large \textbf{NST}: \large \textit{The Noise Stress Test Database}.
-    \item \large \textbf{CU}: \large \textit{The Creighton University Sustained Ventricular Arrhythmia Database}.
+	\item \large \textbf{AHA}: \large \textit{The American Heart Association Database for Evaluation of Ventricular Arrhythmia Detectors}.
+	\item \large \textbf{MIT–BIH}: \large \textit{The Massachusetts Institute of Technology–Beth Israel Hospital Arrhythmia Database}.
+	\item \large \textbf{ESC}: \large \textit{The European Society of Cardiology ST-T Database} (90 records of 2 hours each).
+	\item \large \textbf{NST}: \large \textit{The Noise Stress Test Database}.
+	\item \large \textbf{CU}: \large \textit{The Creighton University Sustained Ventricular Arrhythmia Database}.
 \end{itemize}
 
 \section{MIT-BIH}
 
 \begin{figure}[htb]
-    \begin{center}  
-        \includegraphics[scale=0.6]{images/haptic.png}
-    \end{center}
-    \caption{Beat examples.}
-    \legend{Source: \cite[p. 13]{earnshaw2014virtual}}
-    \label{fig_mitbih}
+	\begin{center}  
+		\includegraphics[scale=0.6]{images/haptic.png}
+	\end{center}
+	\caption{Beat examples.}
+	\legend{Source: \cite[p. 13]{earnshaw2014virtual}}
+	\label{fig_mitbih}
 \end{figure}
 
 \subsection{Sub section}
 
 \begin{table}[htb]
-    \centering
-    \caption{Records used and number of representatives of each class for each of the partitions.}
-    \begin{adjustbox}{width=1\textwidth}
-    \label{tabela-particoes}
-    \begin{tabular}{|c|c|c|c|c|c|c|}
-    \hline
-        \rowcolor[HTML]{D0D0D0}
-        Partition                     & Registry                                                                                                                                              & Class N & Class SVEB & Class VEB \\ \hline
-        \hline      
-        \cellcolor[HTML]{EFEFEF}DS1   & 101, 106, 108, 109, 112, 114, 115, 116, 118, 119, 122, 124, 201, 203, 205, 207, 208, 209, 215, 220, 223, 230 & 45543    & 782         & 3469       \\ \hline        
-        \cellcolor[HTML]{EFEFEF}DS11  & 101, 106, 108, 109, 114, 115, 116, 119, 122, 209, 223                                                                                                  & 22249    & 474         & 1615       \\ \hline      
-        \cellcolor[HTML]{EFEFEF}DS12  & 112, 118, 124, 201, 203, 205, 207, 208, 215, 220, 230                                                                                                  & 23294    & 308         & 1854       \\ \hline  
-        \cellcolor[HTML]{EFEFEF}DS2   & 100, 103, 105, 11, 113, 117, 121, 123, 200, 202, 210, 212, 213, 214, 219, 221, 222, 228, 231, 232, 233, 234  & 44049    & 1808        & 3143       \\ \hline
-        \rowcolor[HTML]{B8B8B8} 
-        \cellcolor[HTML]{EFEFEF}Total &                                                                                                                                                        & 89592    & 2590        & 6612       \\ \hline
-    \end{tabular}
-    \end{adjustbox}
+	\centering
+	\caption{Records used and number of representatives of each class for each of the partitions.}
+	\begin{adjustbox}{width=1\textwidth}
+		\label{tabela-particoes}
+		\begin{tabular}{|c|c|c|c|c|c|c|}
+			\hline
+			\rowcolor[HTML]{D0D0D0}
+			Partition                     & Registry                                                                                                                                              & Class N & Class SVEB & Class VEB \\ \hline
+			\hline      
+			\cellcolor[HTML]{EFEFEF}DS1   & 101, 106, 108, 109, 112, 114, 115, 116, 118, 119, 122, 124, 201, 203, 205, 207, 208, 209, 215, 220, 223, 230 & 45543    & 782         & 3469       \\ \hline        
+			\cellcolor[HTML]{EFEFEF}DS11  & 101, 106, 108, 109, 114, 115, 116, 119, 122, 209, 223                                                                                                  & 22249    & 474         & 1615       \\ \hline      
+			\cellcolor[HTML]{EFEFEF}DS12  & 112, 118, 124, 201, 203, 205, 207, 208, 215, 220, 230                                                                                                  & 23294    & 308         & 1854       \\ \hline  
+			\cellcolor[HTML]{EFEFEF}DS2   & 100, 103, 105, 11, 113, 117, 121, 123, 200, 202, 210, 212, 213, 214, 219, 221, 222, 228, 231, 232, 233, 234  & 44049    & 1808        & 3143       \\ \hline
+			\rowcolor[HTML]{B8B8B8} 
+			\cellcolor[HTML]{EFEFEF}Total &                                                                                                                                                        & 89592    & 2590        & 6612       \\ \hline
+		\end{tabular}
+	\end{adjustbox}
 \end{table}
 
 \subsubsection{Sub sub section}
@@ -75,57 +75,57 @@ w_{ij} = e_{i,j} = \sqrt{(x_i - x_j)^2 + (y_i - y_j)^2 + (z_i - z_j)^2},
 \end{equation}
 
 \begin{algorithm}
-    \caption{Euclid’s algorithm}\label{alg:euclid}
-    \begin{algorithmic}[1]
-        \Procedure{Euclid}{$a,b$}\Comment{The g.c.d. of a and b}
-        \State $r\gets a\bmod b$
-        \While{$r\not=0$}\Comment{We have the answer if r is 0}
-        \State $a\gets b$
-        \State $b\gets r$
-        \State $r\gets a\bmod b$
-        \EndWhile\label{euclidendwhile}
-        \State \textbf{return} $b$\Comment{The gcd is b}
-        \EndProcedure
-    \end{algorithmic}
+	\caption{Euclid’s algorithm}\label{alg:euclid}
+	\begin{algorithmic}[1]
+		\Procedure{Euclid}{$a,b$}\Comment{The g.c.d. of a and b}
+		\State $r\gets a\bmod b$
+		\While{$r\not=0$}\Comment{We have the answer if r is 0}
+		\State $a\gets b$
+		\State $b\gets r$
+		\State $r\gets a\bmod b$
+		\EndWhile\label{euclidendwhile}
+		\State \textbf{return} $b$\Comment{The gcd is b}
+		\EndProcedure
+	\end{algorithmic}
 \end{algorithm}
 \begin{equation}
-    \label{eq:sigmoide}
-    s(v)=\frac{1}{1+\exp(-v)}
+\label{eq:sigmoide}
+s(v)=\frac{1}{1+\exp(-v)}
 \end{equation}
 
 \begin{figure}[htb]
-    \begin{center}  
-        \begin{tikzpicture}
-        \begin{axis}[
-        legend pos=north west,
-        axis x line=middle,
-        axis y line=middle,
-        x tick label style={/pgf/number format/fixed,
-            /pgf/number format/fixed zerofill,
-            /pgf/number format/precision=1},
-        y tick label style={/pgf/number format/fixed,
-            /pgf/number format/fixed zerofill,
-            /pgf/number format/precision=1},
-        grid = major,
-        width=10cm,
-        height=6cm,
-        grid style={dashed, gray!30},
-        xmin=-10,     % start the diagram at this x-coordinate
-        xmax= 10,    % end   the diagram at this x-coordinate
-        ymin= 0,     % start the diagram at this y-coordinate
-        ymax= 1,   % end   the diagram at this y-coordinate
-        %axis background/.style={fill=white},
-        xlabel=$v$,
-        ylabel=$s$,
-        tick align=outside,
-        enlargelimits=false]
-        % plot the stirling-formulae
-        \addplot[domain=-10:10, blue, ultra thick,samples=500] {1/(1+exp(-x))};
-        \end{axis}
-        \end{tikzpicture}
-    \end{center}
-    \caption{Behavior of the sigmoid function for values between -10 and 10.}
-    \label{fig_sigmoide}
+	\begin{center}  
+		\begin{tikzpicture}
+		\begin{axis}[
+		legend pos=north west,
+		axis x line=middle,
+		axis y line=middle,
+		x tick label style={/pgf/number format/fixed,
+			/pgf/number format/fixed zerofill,
+			/pgf/number format/precision=1},
+		y tick label style={/pgf/number format/fixed,
+			/pgf/number format/fixed zerofill,
+			/pgf/number format/precision=1},
+		grid = major,
+		width=10cm,
+		height=6cm,
+		grid style={dashed, gray!30},
+		xmin=-10,     % start the diagram at this x-coordinate
+		xmax= 10,    % end   the diagram at this x-coordinate
+		ymin= 0,     % start the diagram at this y-coordinate
+		ymax= 1,   % end   the diagram at this y-coordinate
+		%axis background/.style={fill=white},
+		xlabel=$v$,
+		ylabel=$s$,
+		tick align=outside,
+		enlargelimits=false]
+		% plot the stirling-formulae
+		\addplot[domain=-10:10, blue, ultra thick,samples=500] {1/(1+exp(-x))};
+		\end{axis}
+		\end{tikzpicture}
+	\end{center}
+	\caption{Behavior of the sigmoid function for values between -10 and 10.}
+	\label{fig_sigmoide}
 \end{figure}
 
 \chapter{RESULTS}
